--- a/index.css
+++ b/index.css
@@ -8,7 +8,7 @@
 .container{
     width: 100%;
     height: 100vh;
-    background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url('images/world\ tour.jpg');
+    background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url('world\ tour.jpg');
     background-position: center;
     background-size: cover;
     padding-left: 5%;
